# soot-indentation

./: .gitignore  .gitmodules  CMakeLists.txt
afm/: afm_step_handler.h  anchor_plane.cpp  anchor_plane.h
aggregates/size_150/: aggregate_1.txt
aggregates/size_300/: aggregate_1.txt
aggregates/size_50/: aggregate_1.txt
energy/: compute_energy.cpp  compute_energy.h
fix/: fixed_step_handler.h
plots/: energy_multiplot.plt  energy_plot.plt  energy_rotation_plot.plt  hamaker_parity.plt  hamaker_plot.plt
plots/production/: 01a_afm_plot.plt  02_spiral_plot.plt  03_hooks_plot.plt
plots/verification/: hamaker_large_stats.plt  hamaker_parity.plt  sintering_multiplot.plt  sintering_plot.plt
production/: 01_afm_aggregate.cpp  01a_small_aggregate.sh  01b_medium_aggregate.sh  01c_large_aggregate.sh  02_spiral.cpp  03_hooks.cpp
reader/: mackowski_reader.cpp  mackowski_reader.h
verification/: 01_particles_colliding.cpp  02_particles_colliding.cpp  03_particles_colliding.cpp  04_particles_colliding.cpp  05_hamaker.cpp  06_hamaker.cpp  06_sintering.cpp  07_sintering.cpp  08_sintering.cpp  09_sintering.cpp  10_sintering.cpp
writer/: writer.cpp  writer.h
